--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ BERTQG/models/uqa*
 .ipynb_checkpoints/Regularization_module-checkpoint.py
 BERTQG/.ipynb_checkpoints/modeling-checkpoint.py
 BERTQG/.ipynb_checkpoints/token_generation-checkpoint.py
+.ipynb_checkpoints/Analysis-checkpoint.ipynb
