fixed path issue in BERTQG & added heuristics inside token_generation and soft-target generation in Regularization.ipynb

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .ipynb_checkpoints/Regularization-checkpoint.ipynb
 __pycache__
+data/
+models/
 BERTQG/models/bert-base-uncased/pytorch_model.bin
 BERTQG/models/lm*
 BERTQG/models/uqa*
